✨ z-indexing fixes

--- a/src/styles.css
+++ b/src/styles.css
@@ -106,7 +106,6 @@
   position: sticky;
   top: 0;
   width: 100%;
-  z-index: 2;
   line-height: 1.5;
   display: flex;
   align-items: baseline;
